admin/assets/less/mura-grid.less
/* ... */
	/* @end */

	table .navZoom {
		margin: 0 !important;
		padding: .2em !important;
		list-style: none;
		background-image: none !important;
		position: relative;
		display: inline-block;
		clear: none;
		border: 0;
	}

	/* @end */


	/* @group Quick Edit */

	.mura-quickEdit {
		background-color: #272727;
		opacity: .95;
		position: absolute;
		bottom: 34px;
		left: 50%;
		margin-left: -92px;
		width: 160px;
		min-height: 70px;
		z-index: 10;
		display: block;
		border-radius: 5px;
		padding: 8px 10px;
		box-shadow: 0 2px 4px #333232;
		white-space: normal;
		font-size: @qeFontSize;
		text-align: left;

		h1 {
		color: #fff !important;
		font-size: 11px !important;
		text-align: left;
		margin: 0 0 .75em 0;
		font-weight: normal;
		padding-right: 20px;
		line-height: 1;
			}

		.cancel {
			position: absolute;
			top: 4px;
			right: 4px;
			cursor: pointer;

			i {
				font-size: 16px;
				color: @gray;
				text-shadow: 0 -1px 0 #000;

				&:hover {
					color: @grayDark;
					}

				}
			}

		img.loader {
			position: absolute;
			left: 50%;
			top: 50%;
			margin-left: -16px;
			margin-top: -16px;
			width: 24px !important;
			height: 24px !important;
			}

		input.datepicker {
			width: 151px;
			}

		select {
			margin-bottom: .75em;
			width: 158px;
			font-size: @qeFontSize;
			padding: 2px 2px;
			height: auto;
			line-height: 1;
			outline: 0;
			}

		.form-actions {
			text-align: center;
			margin: .25em 0 0;
			padding: 0;
			border: 0;
			}

		.btn {
			cursor: pointer;
			margin: 0 auto;
			padding: 1px 12px;
			font-size: @qeFontSize;
			}

		li {
			text-align: left;
			margin: 0;
			padding: 0;
			}

		li label {
			width: 160px;
			display: block;
			color: #fff;
			font-size: @qeFontSize;
			clear: right;
			text-align: left;
			}

		li select {
			width: 50px;
			float: none;
			}

		li input.datepicker {
			width: 156px;
			font-size: @qeFontSize;
			color: #333232;
			margin: 0 2px .75em 0;
			padding: 2px;
			height: 20px;
			}

		li img {
			padding: 0;
			}
	}

	.template .mura-quickEdit {
		bottom: 36px;
	}

	.mura-quickEdit:after {
		content: ' ';
		position: absolute;
		z-index: 11;
		width: 24px;
		height: 14px;
		left: 80px;
		bottom: -14px;
		background: url('../images/quickedit-bottom.png') no-repeat center bottom;
		opacity: .95;
	}

	.mura-quickEdit:hover {
		cursor: default;
	}

	.hasDraft .mura-quickEdit {
		background: #ccc;
		text-align: left;
		box-shadow: 0 2px 4px #666;
		width: 180px;
	}

	.hasDraft .mura-quickEdit:after {
		bottom: -14px;
		background: url('../images/quickedit-bottom-hasdraft.png') no-repeat center bottom;
	}

	.hasDraft .mura-quickEdit > i {
			float: left !important;
			margin-left: -4px !important;
			font-size: 20px !important;
			}

	.hasDraft .mura-quickEdit h1 {
		color: #333 !important;
		font-weight: bold !important;
		font-size: 16px !important;
		line-height: 20px !important;
		margin-bottom: 2px !important;
	}

	.hasDraft .mura-quickEdit .cancel {

			i {
				font-size: 16px;
				color: @grayDark;
				text-shadow: 0 1px 0 #fff;

				&:hover {
					color: @grayDarker;
					}

				}
			}

	.hasDraft .mura-quickEdit p {
		clear: both;
		line-height: 1.2;
		font-size: @qeFontSize !important;
	}

	.hasDraft .mura-quickEdit a.mura-quickEditItem {
		border-bottom: 0;
	}

	/* @end */


// Shared Grid Styles

.mura-grid, .mura-table-grid {

.bullet { color: @iconColor;
	font-size: 20px;
	 }

.add i {
		display: block;
		width: 24px;
		font-size: 16px;
		line-height: 27px;
		color: @iconColor;
		margin-top: 2px;
		}
	
.add:hover i {
		color: @grayDarker;
		}

td {
	padding: 4px 5px 4px 5px;
	border-left: 1px solid #DBDBDB;
	//border-right: 1px solid #DBDBDB;
	white-space: nowrap;
	//text-align: center;
	width: 1%;

	&.add {

		padding: 5px 4px 0;

		i {  /* Tab Flat */
			line-height: 1;
			}
	 }
}

a > i {

	/*
text-shadow: 0 0 1px @blue;
	text-stroke: 1px solid @white;
*/

	}

i+span, .bullet+span { display: none; } // Hiding <span> created for screen readers just in case the "title" isn't sufficient on a non-semantic element (i)

i {
	font-size: 14px;
	.square(18px);
	color: lighten(@iconColor,0%);

	&.icon-ban-circle,
	&.icon-eye-close { font-size: 16px; }

	&.icon-list-alt,
	&.icon-calendar { font-size: 20px; }

	&.icon-minus { color: @grayLight; }

	}

.mura-quickEditItem {
		cursor: pointer;
		/* border-bottom: 1px dotted; */

		i {
			color: @iconColor;
			}

		&:hover i {
			color: @grayDarker !important;
			text-decoration: none;
			}

		// i.icon-minus { color: @gray; }

		}

	#selected .mura-quickEditItem {
		font-weight: bold;
		}

	/* @group Add Content Nav/Menu */

	div.menu {
		position: absolute;
		background-color: #F2F2F2;
		layer-background-color: #CCCCCC;
		border: 0;
		z-index: 20;
		padding: 6px;
	}
}

#tabFlat .mura-table-grid .add i { margin-top: 0; }

// Add Content

#newContentMenu {

width: 130px;
position: absolute;
z-index: 20;
padding: 0;
background: rgba(0,0,0,.8);
.border-radius(5px);
.box-shadow(1px 1px 4px rgba(0,0,0,.65));

	ul {
		margin: 0;
		overflow: hidden;
		.border-radius(5px);
		padding-left: 0;
		padding-bottom: 4px;
	}

	li {
		list-style: none;
		margin: 0;
		padding: 0;
		position: relative;
		border-top: 1px dotted rgba(255,255,255,.2);

			&:first-child { border-top: 0; }
		}

	li > a {
		display: block;
		text-decoration: none;
		margin: 0;
		padding: .12em 1em;
		line-height: 28px;
		color: @gray;
		text-shadow: 0 -1px 0 rgba(0,0,0,1.0);

			i {
				font-size: 16px;
				margin-right: .25em;
				position: relative;
				top: 2px;
			}

			&#newZoom i { top: 0; }

		}

	li > a:hover {
		color: @white;
		text-decoration: none;

		i { color: @white; }

		}

	/*
#newZoom a:before { content: '\f00e'; }
	#newContent	a:before { content: '\f067';  }
	#newCopy a:before { content: '\f0c5'; }
	#newCopyAll a:before { content: '\f0e8'; }
	#newPaste a:before { content: '\f0ea'; }
*/

}
/* ... */

